# CSC_Project

./: .gitignore  README.md  README.txt  clear_files.sh  resources.h
Admin/: CMakeLists.txt  README.md  README.txt  admin.cpp
Client1/: CMakeLists.txt  README.md  README.txt  client  client.cpp
Client2/: CMakeLists.txt  README.md  README.txt  client.cpp
Client3/: CMakeLists.txt  README.md  README.txt  client.cpp
Server/: CMakeLists.txt  README.txt  server.cpp
